fix css so delete btn and search field are visible (#9802)
* fix css so delete btn and search field are visible

* add padding-top to maintain current spacing

--- a/frontend/packages/text-editor/src/TextEditor.module.css
+++ b/frontend/packages/text-editor/src/TextEditor.module.css
@@ -53,13 +53,14 @@
 .TextEditor__topRow {
   border-bottom: 1px solid #bcc7cc;
   margin-bottom: 2rem;
+  margin-left: 2rem;
   padding: 2rem 0;
-  display:flex;
+  display: flex;
   justify-content: space-between;
 }
 
 .TextEditor__main {
-  padding: 2rem 4rem;
+  padding-top: 2rem;
   margin: 0 auto;
   width: 100%;
   background-color: #fff;
